initial styles, find bug with overflow in white space on splash page

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,6 @@
   color: white;
   text-align: center;
   font-size: 16px;
-  opacity: 0.6;
   transition: 0.4s;
 }
 
@@ -18,13 +17,15 @@
   background-color: rgba(244,81,30,0.7);
 }
 .contain{
-  width: 100vw;
-  height: 100vh;
-  background: url("") no-repeat center center fixed;
+  width: auto;
+  height: auto;
+  min-height: 100vh;
+  background: url("./models/beerBG.jpg") no-repeat center center fixed;
   background-size:cover;
-
- -webkit-background-size: cover; /* For WebKit*/
- -moz-background-size: cover;    /* Mozilla*/
- -o-background-size: cover;      /* Opera*/
- background-size: cover;
+   -webkit-background-size: cover; /* For WebKit*/
+   -moz-background-size: cover;    /* Mozilla*/
+   -o-background-size: cover;      /* Opera*/
+   background-size: cover;
+   color: white;
+   overflow: none;
 }
